Update package dependencies, enhance README with customization guide, and improve layout structure with header, footer, and cookie banner. Adjust lint command to auto-fix issues and add MDX content handling for insurance types.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev:turbo": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "next lint --fix",
     "format": "prettier --write ."
   },
   "dependencies": {
@@ -23,6 +23,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@tailwindcss/typography": "^0.5.16",
+    "@types/next": "^8.0.7",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
